# srvsh

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.nix  default.nix  shell.nix
src/: CMakeLists.txt  main.c  parse.c  process.c  srvsh.c
src/srvsh/: parse.h  process.h  srvsh.h
tests/: CMakeLists.txt  srvsh_srvsh.c
